[package]
name = "telemoq"
version = "0.1.0"
edition = "2021"
description = "MoQ transport for robotics teleoperation"
repository = "https://github.com/alltheseas/telemoq"
license = "MIT OR Apache-2.0"

[dependencies]
moq-lite = { path = "../lumina-video/moq/rs/moq-lite" }
moq-native = { path = "../lumina-video/moq/rs/moq-native", default-features = true }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
url = "2"
bytes = "1"
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1"

[dev-dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rcgen = "0.13"
time = "0.3"
